--- a/public/index.css
+++ b/public/index.css
@@ -17,3 +17,5 @@ form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 
 #l {width:10%; margin-right: 0%;}
 
 #m {width:79%;}
+
+#messages { position: absolute; bottom: 3.5em; width: 100%; }
