--- a/public/index.css
+++ b/public/index.css
@@ -2,11 +2,11 @@
 
 body { font: 13px Helvetica, Arial; }
 
-form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
+#messageInput { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
 
-form input { border: 0; padding: 10px; width: 90%; margin-right: .5%; }
+#messageInput > input { border: 0; padding: 10px; margin-right: .5%; }
 
-form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
+#messageInput > button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
 
 #messages { list-style-type: none; margin: 0; padding: 0; }
 
@@ -19,3 +19,9 @@ form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 
 #m {width:79%;}
 
 #messages {margin-bottom: 3.5em; width: 100%; }
+
+#loginBody form input { border:0 ; padding: 10px; top:0; }
+
+#loginBody form button { width: 10%; background: rgb(130, 224, 255); border: none; padding: 10px; }
+
+#loginBody { border:3px; padding: 3px; width: 60%; margin-left: auto; margin-right: auto; }
